Require repository_url param for package fetch
This removes the use of /opt/mesosphere/setup-flags/repository-url from
the pkgpanda API.
